fixed issue with container stretching to the bottom of the page

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1948,7 +1948,7 @@ input, select, textarea {
 		.box.style3 {
 			background: #fff;
 			padding: 3em;
-			/* height: 140rem; */
+			/* padding: 1rem; */
 		}
 
 			.box.style3 header {
@@ -2568,6 +2568,7 @@ input, select, textarea {
 
 				.box.style3 {
 					padding: 2em 1.25em 2em 1.25em;
+					background: black;
 				}
 
 		/* Header */
